<resources>
    <string name="app_name">DishPatch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="sample_text">
        Sample Text
    </string>
    <string name="cart_title">Cart</string>
    <string name="go_back">Go Back</string>
    <string name="edit_cart_list">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Order view-->
    <string name="my_orders">My Orders</string>
    <string name="order_status_active">Active</string>
    <string name="order_status_completed">Completed</string>
    <string name="order_status_cancelled">Cancelled</string>
    <string name="empty_order_message">You dont have any active orders at this time</string>
    <string name="order_empty_icon">Empty order icon</string>


    <string name="all">All</string>
    <string name="checkout">Checkout</string>
    <string name="vnd">₫</string>
    <string name="delete">Delete</string>
    <string name="askToSelectToDelete">Please select items to delete!</string>
    <string name="cartEmtpty">There\'s nothing in your cart right now, come back later!</string>

    <!-- Order Confirmation -->
    <string name="order_confirmed_title">Order Confirmed!</string>
    <string name="order_confirmed_message">Your order has been placed successfully</string>
    <string name="order_delivery_info">Delivery by Thu, 29th, 4:00 PM</string>
    <string name="track_my_order">Track my order</string>
    <string name="support_message">If you have any questions, please reach out\ndirectly to our customer support</string>
    <string name="back_button_description">Back</string>

    <!-- Payment Confirm -->
    <string name="payment">Payment</string>
    <string name="order_confirm">Order confirm</string>
    <string name="back">Back to previous screen</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="delivery_address_example">778 Locust View Drive Oaklanda, CA</string>
    <string name="order_summary">Order Summary</string>
    <string name="product_names">Strawberry Shake\nBroccoli Lasagna</string>
    <string name="total_price">Total price</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="delivery_time_value">25 mins</string>
    <string name="pay_now">Pay Now</string>

    <plurals name="item_count">
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>

    <string name="order_details_unavailable">Order Details Unavailable</string>
    <string name="no_items_in_order">0 items</string>

</resources>