<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">


    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:background="@color/yellow"
        android:contentDescription="back to welcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/league_spartan_semibold"
        android:text="@string/my_orders"
        android:textColor="@color/background_white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/welcome_fragment"
        android:layout_width="match_parent"
        android:layout_height="546dp"
        android:translationZ="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>


    <FrameLayout
        android:id="@+id/welcomeframe"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rectangle_container"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/centerEmptyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/ivEmptyIcon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/transfer_document_icon"
                android:contentDescription="@string/order_empty_icon" />

            <TextView
                android:id="@+id/tvEmptyMessage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/empty_order_message"
                android:textColor="#E95322"
                android:textSize="32sp"
                android:fontFamily="@font/league_spartan"
                android:gravity="center"
                android:layout_marginTop="12dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/statusButtonRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="top|center_horizontal">

            <Button
                android:id="@+id/btnActive"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/order_status_active"
                android:textColor="#E95322"
                android:backgroundTint="#FAD0C4"
                android:layout_marginEnd="2dp" />

            <Button
                android:id="@+id/btnCompleted"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/order_status_completed"
                android:textColor="#E95322"
                android:backgroundTint="#FAD0C4"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <Button
                android:id="@+id/btnCancelled"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/order_status_cancelled"
                android:textColor="#E95322"
                android:backgroundTint="#FAD0C4"
                android:layout_marginStart="4dp" />
        </LinearLayout>
    </FrameLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>
